# G-calendar-mcp

./: .env.example  .gitignore  .mcp.json  AUDIT_REPORT.md  CLAUDE.md  Dockerfile  FIX_PLAN.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test_quick.py
.github/workflows/: deploy.yml
scripts/: migrate_sqlite_to_postgres.py
src/gcalendar_mcp/: __init__.py  __main__.py  server.py
src/gcalendar_mcp/api/: calendars.py  client.py  events.py  freebusy.py
src/gcalendar_mcp/cli/: auth.py  install.py  time_tracking.py
src/gcalendar_mcp/tools/attendees/: __init__.py  manage_attendees.py  respond_to_event.py
src/gcalendar_mcp/tools/crud/: __init__.py  create_event.py  delete_event.py  get_event.py  get_freebusy.py  list_events.py  search_events.py  update_event.py
src/gcalendar_mcp/tools/intelligence/: __init__.py  batch_operations.py  find_meeting_slots.py  weekly_brief.py
src/gcalendar_mcp/tools/reference/: __init__.py  get_settings.py  list_calendars.py  list_colors.py  manage_settings.py
src/gcalendar_mcp/tools/time_tracking/: __init__.py  database.py  exclusions.py  init.py  manage.py  norms.py  parser.py  phases.py  projects.py  report.py  settings.py  status.py  tasks.py
src/gcalendar_mcp/utils/: config.py
src/google_calendar/: __main__.py  export_router.py  mcp_oauth.py  oauth_server.py  oauth_state.py  server.py  settings.py
src/google_calendar/api/: calendars.py  client.py  events.py  freebusy.py
src/google_calendar/cli/: auth.py  install.py  time_tracking.py
src/google_calendar/db/: __init__.py  connection.py  dates.py  schema.sql
src/google_calendar/tools/: attendees.py  availability.py  calendars.py  events.py
src/google_calendar/tools/attendees/: __init__.py  manage_attendees.py  respond_to_event.py
src/google_calendar/tools/contacts/: __init__.py  database.py  database_async.py  database_sqlite.py  lookup.py  manage.py  report.py
src/google_calendar/tools/crud/: __init__.py  create_event.py  delete_event.py  get_event.py  get_freebusy.py  list_events.py  search_events.py  update_event.py
src/google_calendar/tools/intelligence/: __init__.py  batch_operations.py  find_meeting_slots.py  weekly_brief.py
src/google_calendar/tools/projects/: __init__.py  database.py  database_sqlite.py  init.py  manage.py  parser.py  report.py
src/google_calendar/tools/reference/: __init__.py  list_calendars.py  list_colors.py  manage_calendars.py  manage_settings.py
src/google_calendar/tools/time_tracking/: __init__.py  database.py  database_async.py  init.py  manage.py  report.py
src/google_calendar/utils/: config.py
tests/: test_contacts.py  test_date_coercion.py  test_mcp_oauth.py
tests/scenarios/: calendars_set_timezone.md
