[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-calendar-mcp"
version = "0.1.0"
description = "Google Calendar MCP server for Claude Desktop"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Dmytro Romanov" }
]
keywords = ["calendar", "google-calendar", "mcp", "claude", "scheduling", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth>=2.23.0",
    "fastmcp>=0.1.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
google-calendar-mcp = "google_calendar.__main__:main"

[project.urls]
Homepage = "https://github.com/DimaRmnv/G-calendar-mcp"
Repository = "https://github.com/DimaRmnv/G-calendar-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/google_calendar"]

[tool.hatch.build.targets.sdist]
include = ["src/google_calendar"]

[tool.hatch.build]
sources = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
